<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAjout">


    <EditText
        android:id="@+id/et_name4"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/enter_status"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/tv_pays"
        app:layout_constraintTop_toBottomOf="@+id/et_age" />

    <EditText
        android:id="@+id/et_name3"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/tv_pays"
        app:layout_constraintTop_toBottomOf="@+id/tv_ajout" />

    <TextView
        android:id="@+id/tv_city2"
        android:layout_width="48dp"
        android:layout_height="25dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="56dp"
        android:hint="@string/city"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pays" />

    <TextView
        android:id="@+id/tv_ajout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="92dp"
        android:text="@string/add_elements"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pays"
        android:layout_width="69dp"
        android:layout_height="26dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="60dp"
        android:text="@string/country"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ajout" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/enter_age"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/tv_pays"
        app:layout_constraintTop_toBottomOf="@+id/tv_ajout" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="51dp"
        android:layout_height="29dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="116dp"
        android:hint="@string/age"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pays" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="180dp"
        android:hint="@string/status"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pays" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/enter_city"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/tv_pays"
        app:layout_constraintTop_toBottomOf="@+id/tv_ajout" />


</androidx.constraintlayout.widget.ConstraintLayout>