<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityGestion">

    <TextView
        android:id="@+id/tv_affichage"
        android:layout_width="183dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/tv_affichage"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="223dp"
        android:layout_height="52dp"
        android:scrollbarSize="78dp"
        android:text="@string/btn_profile"
        app:layout_constraintBottom_toTopOf="@+id/btn_deco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_affichage"
        app:layout_constraintVertical_bias="0.912" />

    <Button
        android:id="@+id/btn_deco"
        android:layout_width="219dp"
        android:layout_height="51dp"
        android:layout_marginBottom="36dp"
        android:scrollbarSize="78dp"
        android:text="@string/btn_deco"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="645dp" />

    <Button
        android:id="@+id/buttonAjouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:text="@string/ajouter_a_la_bd"
        app:layout_constraintBottom_toTopOf="@+id/btn_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_affichage"
        app:layout_constraintVertical_bias="0.287" />

    <Button
        android:id="@+id/buttonData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="96dp"
        android:text="@string/view_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAjouter" />
</androidx.constraintlayout.widget.ConstraintLayout>