<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityElements">

    <ListView
        android:id="@+id/lv_donnees"
        android:layout_width="188dp"
        android:layout_height="495dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fr_fragment"
        android:layout_width="198dp"
        android:layout_height="295dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toEndOf="@+id/lv_donnees"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="12dp"
        android:text="@string/update_data"
        app:layout_constraintBottom_toTopOf="@+id/fr_fragment"
        app:layout_constraintStart_toEndOf="@+id/lv_donnees" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:text="@string/delete_data"
        app:layout_constraintStart_toEndOf="@+id/lv_donnees"
        app:layout_constraintTop_toBottomOf="@+id/fr_fragment" />

    <Button
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="88dp"
        android:text="@string/return_to_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>